# lesschess

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO  eval.c  eval.h  evaluate.c  evaluate.h  magic_tables.c  magic_tables.h  main.c  move.c  move.h  movegen.c  movegen.h  perft.c  perft.h  position.c  position.h  prime_number_generator.py  search.c  search.h  silly_game.txt  silly_games.txt  testsuite.py  textgui.c  textgui.h  winboard_reqs.txt  xboard.c  xboard.h
docs/: plan.md
old/: Makefile  main.c  move.c  movegen.h  position.h  search.c  testsuite.py
old/tools/: Makefile  generate_magic_tables.c
src/: CMakeLists.txt  evaluate.cpp  evaluate.h  lesschess.h  magic_tables.generated.cpp  magic_tables.generated.h  main.cpp  move.cpp  move.h  move.test.cpp  movegen.cpp  movegen.h  perft.cpp  perft.h  perft.test.cpp  position.cpp  position.h  position.test.cpp  ring_buffer.h  ring_buffer.test.cpp  search.cpp  search.h  search.test.cpp  tt.cpp  tt.h
src/detail/: movegen.h  movegen_detail.cpp  movegen_detail.h
tests/: CMakeLists.txt  test_libfmt.cpp  test_outcome.cpp
tools/: CMakeLists.txt  convert_pgn.py  fen_to_ascii.py  generate_magic_tables.cpp  winboard_reqs.txt
